# pyDataverse

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DEVELOPER_ONBOARDING.md  Dockerfile  HISTORY.md  HISTORY.rst  LICENSE.txt  MANIFEST.in  Makefile  README-containers.md  README.md  README.rst  code-of-conduct.md  codecov.yml  display.sh  docker-compose-test.yml  local-test.env  mkdocs.yml  noxfile.py  poetry.toml  pyproject.toml  pytest.ini  requirements.txt  run-tests.sh  setup.cfg  setup.py  test.py  tox.ini  upload-reports.py
.github/: .gitmessage.txt  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-template.md  feature-template.md  issue-template.md  others-template.md
.github/scripts/: pre_publish.py
.github/workflows/: build.yml  codespell.yml  deploy-docs.yml  lint.yml  publish.yml  test-publish.yml  test_build.yml  tests.yml
docker/: docker-compose-base.yml  docker-compose-test-all.yml
docs/: README.md  astro.config.mjs  index.md  package-lock.json  package.json
docs/scripts/: gen_reference.py
docs/src/styles/: custom.css
models/: generate.sh  hub.json  message.json  metrics.json  search.json
models/admin/users/: create.json  user.json
models/collection/: assignee.json  collection.json  content.json  create.json  delete.json  publish.json  role.json  update.json
models/dataset/: assignment.json  create.json  delete.json  edit_get.json  locks.json  peristent_url.json  private_url.json  publish.json  review.json  size.json
models/file/: access.json  filemeta.json  redetect.json  restrict.json  update.json
models/info/: exporters.json  licenses.json  server.json  terms_of_use.json  version.json
models/metadatablocks/: metadatablock.json  overview.json
old_docs/docs/source/: reference.rst
pyDataverse/: __init__.py  api.py  auth.py  models.py  utils.py
pyDataverse/api/: __init__.py  api.py  data_access.py  hub.py  metrics.py  native.py  response.py  search.py  semantic.py  sword.py
pyDataverse/api/utilities/: __init__.py  crawler.py  ds_fetcher.py  fileinput.py  logger.py
pyDataverse/dataverse/: __init__.py  collection.py  contentbase.py  dataset.py  dataverse.py  file.py  metrics.py  search.py
pyDataverse/dataverse/connect/: __init__.py  builder.py  config.py  field.py  metadata.py  utils.py  validated_list.py
pyDataverse/dataverse/views/: baseview.py  collectionview.py  contentview.py  datasetview.py  filesview.py
pyDataverse/docs/source/: conf.py  index.rst  reference.rst
pyDataverse/filesystem/: __init__.py  dvfs.py  reader.py  tab.py  writer.py
pyDataverse/hub/: __init__.py  hub.py  models.py
pyDataverse/mcp/: __init__.py  collection.py  datacite.py  dataset.py  dataverse.py  file.py  middleware.py  search.py  server.py  utils.py
pyDataverse/models/: hub.py  message.py  metrics.py  search.py
pyDataverse/models/admin/: __init__.py
pyDataverse/models/collection/: __init__.py  assignee.py  collection.py  content.py  create.py  delete.py  publish.py  role.py  update.py
pyDataverse/models/dataset/: __init__.py  assignment.py  create.py  delete.py  edit_get.py  locks.py  peristent_url.py  private_url.py  publish.py  review.py  size.py
pyDataverse/models/file/: __init__.py  access.py  filemeta.py  redetect.py  restrict.py  update.py
pyDataverse/models/info/: __init__.py  exporters.py  licenses.py  server.py  terms_of_use.py  version.py
pyDataverse/models/metadatablocks/: __init__.py  metadatablock.py  overview.py
pyDataverse/schemas/json/: dataset_upload_default_schema.json
pyDataverse/templates/: dataverses.csv
requirements/: common.txt  development.txt  docs.txt  lint.txt  packaging.txt  tests.txt
schemas/json/: datafile_upload_schema.json  dataset_upload_default_schema.json  dataverse_upload_schema.json
scripts/: gen_ref_pages.py
src/pyDataverse/: __init__.py  api.py  exceptions.py  models.py  pipeline.py  utils.py
src/pyDataverse/api/: __init__.py  exceptions.py  transport.py
src/pyDataverse/templates/: datafiles.csv  datasets.csv  dataverses.csv
src/pydataverse/api/: client.py  transport.py
tests/: conftest.py  test_api.py  test_models_datafile.py  test_models_dataset.py  test_models_dataverse.py  test_models_dvobject.py  testing-ci.env
tests/api/: test_access.py  test_api.py  test_async_api.py  test_edit.py  test_hub.py  test_upload.py
tests/api/data_access/: test_data_access.py
tests/api/metrics/: test_metrics.py
tests/api/native/: test_collections.py  test_datasets.py  test_files.py  test_info.py  test_metadatablocks.py  test_roles.py  test_users.py
tests/api/search/: test_search.py
tests/api/semantic/: test_semantic.py
tests/api/sword/: test_sword.py
tests/auth/: test_auth.py
tests/data/: add-user.json  create_dataverse_3.json  datafile_upload_full.json  dataset_full.json  dataset_upload_full_default.json  dataset_upload_min_default.json  dataverse_minimum_2.json  dataverse_upload_full.json  dataverse_upload_min.json  file_upload_ds_minimum.json  replace.xyz  tree.json  user.json
tests/data/mcp/: notebook.ipynb
tests/data/user-guide/: datafiles.csv  dataset.json  datasets.csv  dataverse.json
tests/dataverse/: __init__.py  test_collection.py  test_dataset.py  test_dataverse.py  test_file.py  test_search.py  test_version_parsing.py
tests/integration/: conftest.py
tests/integration/api/: conftest.py  test_api.py  test_async_api.py
tests/integration/auth/: test_auth.py
tests/integration/models/: conftest.py  test_datafile.py  test_dataset.py  test_dataverse.py
tests/mcp/: test_collection.py  test_datacite.py  test_dataset.py  test_dataverse.py  test_file.py  test_search.py  test_server.py
tests/models/: test_datafile.py  test_dataset.py  test_dataverse.py  test_models_dvobject.py
tests/unit/: conftest.py  test_client.py  test_datasets.py  test_exceptions.py  test_files.py  test_info.py  test_search.py  test_transport.py  test_utils.py
tests/utils/: test_utils.py
tools/: tests-requirements.txt
(+144 files in other folders)
