[tool.poetry]
name = "pyDataverse"
version = "0.3.4"
description = "A Python module for Dataverse."
authors = [
    "Stefan Kasberger <stefan.kasberger@univie.ac.at>",
    "Jan Range <jan.range@simtech.uni-stuttgart.de>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gdcc/pyDataverse"
packages = [{ include = "pyDataverse" }]

[tool.poetry.dependencies]
python = "^3.8.1"
httpx = "^0.27.0"
jsonschema = "^4.21.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
radon = "^6.0.1"
mypy = "^1.9.0"
autopep8 = "^2.1.0"
pydocstyle = "^6.3.0"
pygments = "^2.17.2"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
tox = "^4.14.2"
selenium = "^4.19.0"
wheel = "^0.43.0"
pre-commit = "3.5.0"
sphinx = "7.1.2"
restructuredtext-lint = "^1.4.0"
rstcheck = "^6.2.1"
ruff = "^0.4.4"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
tox = "^4.14.2"
selenium = "^4.19.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "7.1.2"
pydocstyle = "^6.3.0"
restructuredtext-lint = "^1.4.0"
pygments = "^2.17.2"
rstcheck = "^6.2.1"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^24.3.0"
radon = "^6.0.1"
mypy = "^1.9.0"
types-jsonschema = "^4.23.0"
autopep8 = "^2.1.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["-v", "--cov=pyDataverse"]

[tool.coverage.run]
source = "tests"

[tool.coverage.report]
show_missing = true

[tool.radon]
cc_min = "B"
