[project]
name = "pyDataverse"
version = "0.4.0b1"
description = "A Python module for Dataverse."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Stefan Kasberger", email = "stefan.kasberger@univie.ac.at" },
    { name = "Jan Range", email = "jan.range@simtech.uni-stuttgart.de" },
]
dependencies = [
    "httpx>=0.28.0,<0.30.0",
    "pydantic[email]>=2.10.0,<3.0.0",
    "typing-extensions>=4.14.1,<5.0.0",
    "rich>=14.1.0,<15.0.0",
    "deprecation>=2.1.0,<3.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "pandas>=2.3.3,<3.0.0",
    "cachetools>=6.2.1,<7.0.0",
    "asyncer>=0.0.10,<0.0.11",
    "bigtree>=1.0.0,<2.0.0",
    "rdflib>=7.5.0,<8.0.0",
    "sniffio>=1.3.1,<2.0.0",
    "fsspec>=2026.4.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.1.1,<9.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "wheel>=0.43.0,<0.44.0",
    "pre-commit==3.5.0",
    "ruff>=0.4.4,<0.5.0",
]
mcp = [
    "fastmcp>=2.14.5,<3.0.0",
    "mcp>=1.26.0,<2.0.0",
    "nbconvert>=7.17.0,<8.0.0",
    "nbformat>=5.10.4,<6.0.0",
    "pillow>=12.1.1,<13.0.0",
    "pymupdf>=1.27.1,<2.0.0",
    "toon-format==0.9.0b1,<0.10.0",
]

[project.urls]
repository = "https://github.com/gdcc/pyDataverse"
Documentation = "https://gdcc.github.io/pyDataverse/"

[project.entry-points."fsspec.specs"]
dataverse = "pyDataverse.filesystem.dvfs:DataverseFS"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "pyDataverse" }]

[tool.pytest.ini_options]
addopts = ["-v", "--cov=pyDataverse"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pyDataverse"]

[tool.coverage.report]
show_missing = true
