[metadata]
license_file = LICENSE.txt

[tool:pytest]
testpaths = tests

[radon]
cc_min = B

[flake8]
max-line-length = 88
ignore = E129,E203,E501,W503,S101
exclude =
    docs
    schemas
    templates
    conf.py
    conftest.py
    __pycache__
    .mypy_cache

[pylint]
max-line-length = 88

[pylama:pycodestyle]
max_line_length = 88

[pylama:pylint]
max_line_length = 88
disable = R

[coverage:run]
source=pyDataverse

[coverage:report]
show_missing = true

[coverage:html]
directory = docs/coverage/html

[coverage:xml]
output = coverage.xml
